--- a/Ketch/Base.lproj/Main.storyboard
+++ b/Ketch/Base.lproj/Main.storyboard
@@ -385,7 +385,7 @@ SAILED FOR TODAY.</string>
                                 </variation>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Ketch" translatesAutoresizingMaskIntoConstraints="NO" id="R7N-wp-2MM" customClass="KetchBoatView" customModule="Ketch" customModuleProvider="target">
-                                <rect key="frame" x="280" y="28" width="39" height="42"/>
+                                <rect key="frame" x="280" y="26" width="39" height="42"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="37" id="0hN-wj-xMn"/>
                                     <constraint firstAttribute="width" constant="34" id="iaK-29-sqn"/>
@@ -594,7 +594,7 @@ SAILED FOR TODAY.</string>
                             <constraint firstItem="Jqh-bc-UMn" firstAttribute="width" secondItem="2Mo-6y-hwh" secondAttribute="width" id="c0U-J7-kqI"/>
                             <constraint firstItem="Jqh-bc-UMn" firstAttribute="width" secondItem="sNf-t3-S46" secondAttribute="width" id="de5-PX-OG9"/>
                             <constraint firstItem="C5L-zq-XTw" firstAttribute="width" secondItem="2Mo-6y-hwh" secondAttribute="width" id="hoG-JN-feM"/>
-                            <constraint firstItem="Tsg-XC-3jO" firstAttribute="top" secondItem="R7N-wp-2MM" secondAttribute="bottom" constant="-10" id="lHL-8N-ZCS"/>
+                            <constraint firstItem="Tsg-XC-3jO" firstAttribute="top" secondItem="R7N-wp-2MM" secondAttribute="bottom" constant="-8" id="lHL-8N-ZCS"/>
                             <constraint firstAttribute="trailing" secondItem="Tsg-XC-3jO" secondAttribute="trailing" id="n10-Rj-twj"/>
                             <constraint firstItem="2Mo-6y-hwh" firstAttribute="width" secondItem="ZdL-6o-ahC" secondAttribute="width" id="oHl-VI-KED"/>
                             <constraint firstItem="Jqh-bc-UMn" firstAttribute="width" secondItem="arw-4e-pup" secondAttribute="width" id="oL9-BF-2cB"/>
@@ -1077,7 +1077,7 @@ SAILED FOR TODAY.</string>
                                 </variation>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Ketch" translatesAutoresizingMaskIntoConstraints="NO" id="a2q-Ex-xzO" customClass="KetchBoatView" customModule="Ketch" customModuleProvider="target">
-                                <rect key="frame" x="280" y="508" width="39" height="42"/>
+                                <rect key="frame" x="280" y="506" width="39" height="42"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="37" id="7yv-U3-i9E"/>
                                     <constraint firstAttribute="width" constant="34" id="ywt-nS-ZGa"/>
@@ -1124,7 +1124,7 @@ SAILED FOR TODAY.</string>
                             <constraint firstItem="XQk-zO-0XK" firstAttribute="centerX" secondItem="a2q-Ex-xzO" secondAttribute="centerX" id="Ubs-0l-Bnv"/>
                             <constraint firstAttribute="trailing" secondItem="XQk-zO-0XK" secondAttribute="trailing" id="X27-bp-xOC"/>
                             <constraint firstAttribute="centerX" secondItem="W6B-JD-gK0" secondAttribute="centerX" id="cZp-Ff-wIH"/>
-                            <constraint firstItem="XQk-zO-0XK" firstAttribute="top" secondItem="a2q-Ex-xzO" secondAttribute="bottom" constant="-10" id="csv-41-ja1"/>
+                            <constraint firstItem="XQk-zO-0XK" firstAttribute="top" secondItem="a2q-Ex-xzO" secondAttribute="bottom" constant="-8" id="csv-41-ja1"/>
                             <constraint firstAttribute="centerY" secondItem="W6B-JD-gK0" secondAttribute="centerY" id="g7k-49-I3V"/>
                         </constraints>
                     </view>
@@ -1211,7 +1211,7 @@ SAILED FOR TODAY.</string>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sprite-cloud-4" translatesAutoresizingMaskIntoConstraints="NO" id="cAd-NY-cwO">
                                 <rect key="frame" x="254" y="121" width="95" height="44"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="300" translatesAutoresizingMaskIntoConstraints="NO" id="Ydu-ga-8Jd" customClass="DesignableLabel" customModule="Ketch" customModuleProvider="target">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="300" translatesAutoresizingMaskIntoConstraints="NO" id="Ydu-ga-8Jd" customClass="DesignableLabel" customModule="Ketch" customModuleProvider="target">
                                 <rect key="frame" x="159" y="299" width="284" height="78"/>
                                 <attributedString key="attributedText">
                                     <fragment content="Seems like we’re having some trouble, please give us another chance.">
@@ -1355,8 +1355,8 @@ SAILED FOR TODAY.</string>
         <image name="sprite-sun" width="218" height="186"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Lmi-Sf-5Gu"/>
         <segue reference="nCf-mq-8Rt"/>
+        <segue reference="q7i-Iz-xMU"/>
         <segue reference="9ci-Qu-3Dx"/>
     </inferredMetricsTieBreakers>
 </document>
