Adding version label on settings to make it easier to tell which version of the app one is running

--- a/Ketch/Base.lproj/Settings.storyboard
+++ b/Ketch/Base.lproj/Settings.storyboard
@@ -14,6 +14,7 @@
         <mutableArray key="TransatTextStandard.otf">
             <string>TransatTextStandard</string>
             <string>TransatTextStandard</string>
+            <string>TransatTextStandard</string>
         </mutableArray>
     </customFonts>
     <scenes>
@@ -153,9 +154,19 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cv6-2X-pDR" customClass="WaveView" customModule="Ketch" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="567" width="600" height="33"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="v0.1.0 (23b)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8df-8X-biN">
+                                        <rect key="frame" x="529" y="12" width="63" height="13"/>
+                                        <fontDescription key="fontDescription" name="TransatTextStandard" family="Transat Text" pointSize="12"/>
+                                        <color key="textColor" red="0.050980392159999999" green="0.3921568627" blue="0.53725490200000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="33" id="QhF-In-kt2"/>
+                                    <constraint firstItem="8df-8X-biN" firstAttribute="top" secondItem="cv6-2X-pDR" secondAttribute="topMargin" constant="4" id="ZWp-PP-Zgi"/>
+                                    <constraint firstItem="8df-8X-biN" firstAttribute="trailing" secondItem="cv6-2X-pDR" secondAttribute="trailingMargin" id="xgg-jR-PsG"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uKp-aT-O8G">
@@ -211,6 +222,7 @@
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
                     <connections>
+                        <outlet property="versionLabel" destination="8df-8X-biN" id="LAZ-8k-Lrl"/>
                         <outlet property="waveView" destination="cv6-2X-pDR" id="DHQ-p0-hDp"/>
                         <segue destination="FbI-lK-1wP" kind="custom" identifier="Main_Profile" customClass="LinkedStoryboardPresentSegue" id="oWb-P1-Ra0"/>
                         <segue destination="gQY-5f-Xzl" kind="unwind" identifier="SettingsToLoading" unwindAction="unwindToLoading:" id="Ja7-VP-tLI"/>
